--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ bip39 = "1.0.1"
 ed25519-dalek-bip32 = "0.1.1"
 rand = "0.6.0"
 anyhow = "1.0.45"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+url = "2.2.2"
